--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Lehigh Outfitters Style Guide
+title: Rocky Brands Style Guide
 description: Design standards that comply with ADA for the web
 ---
 
@@ -17,13 +17,25 @@ It can be a good idea to include a <a href="{{ "/gallery.html" | prepend: site.b
 ## Contributing info
 If it's desirable to have people from across the organization contribute to the design system, linking to the <a href="{{ "/contributing.html" | prepend: site.baseurl }}">contributing page</a> from the homepage could be a good idea. -->
 
-# Lehigh Style Guide
+# Rocky Brands Style Guide
 
-The Lehigh style guide are resources to help create and standardize principals for the Lehigh brands, which include Lehigh Outfitters, Lehigh Safety Shoes, CustomFit, and SlipGrips. It's to be used for both internal and external resources to help create brand consistency and strive to be ADA compliant on the web.
+These style guides are resources to help create and standardize principals for the Rocky brands, which include Rocky Boots, Durango Boots, Georgia Boots, Lehigh Outfitters, Lehigh Safety Shoes, CustomFit, and SlipGrips. It's to be used for both internal and external resources to help create brand consistency and strive to be ADA compliant on the web.
 
 Having a consistent brand enables a better user experience, performance, and a more accessible web which directly impacts overall revenue growth. Erratic design patterns or improper implementations can cause havoc to properties with multiple people working on them.
 
 ## Brands
+
+### Rocky Boots
+
+Some text to go here.
+
+### Durango Boots
+
+Some text to go here.
+
+### Georgia Boots
+
+Some text to go here.
 
 ### Lehigh Outfitters
 
@@ -42,4 +54,4 @@ The leader in managed safety footwear programs.
 Slip-resistant shoes for restaurants, hospitals, airlines, vets, schools, etc.
 
 ## Contribution
-This document was written by Cody Saylor (cody.saylor@lehighoutfitters.com) based on [the style guide guide](https://github.com/bradfrost/style-guide-guide) by [Brad Frost](https://github.com/bradfrost). If more people contribute to the design system, they will be listed here with their contact information.
+This document was written by Cody Saylor (cody.saylor@lehighoutfitters.com), and Levi Stroop (levi.stroop@rockybrands.com) based on [the style guide guide](https://github.com/bradfrost/style-guide-guide) by [Brad Frost](https://github.com/bradfrost). If more people contribute to the design system, they will be listed here with their contact information.
