--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ It can be a good idea to include a <a href="{{ "/gallery.html" | prepend: site.b
 ## Contributing info
 If it's desirable to have people from across the organization contribute to the design system, linking to the <a href="{{ "/contributing.html" | prepend: site.baseurl }}">contributing page</a> from the homepage could be a good idea. -->
 
-# Rocky Brands Style Guide
+# Rocky Brands
 
 These style guides are resources to help create and standardize principals for the Rocky brands, which include Rocky Boots, Durango Boots, Georgia Boots, Lehigh Outfitters, Lehigh Safety Shoes, CustomFit, and SlipGrips. It's to be used for both internal and external resources to help create brand consistency and strive to be ADA compliant on the web.
 
