Changed Background color to #f0f2ed to be lighter. Also fixed extra margin in the second text section.

--- a/rocky_style.html
+++ b/rocky_style.html
@@ -4,7 +4,7 @@ custom_css: rocky_style
 color_01: 8a1913
 color_02: dc291e
 color_03: 282828
-color_04: e5e8df
+color_04: f0f2ed
 color_05: 515844
 color_text_01: Used for some text. Titles/headers/borders/anything that may need to stand out. Hover possibility. White text can be used on this.
 color_text_02: Used as an accent. Border or button click state. No text on this except when hovering/clicking. Not AAA compliant for Normal size black or white text.
