--- a/rocky_style.html
+++ b/rocky_style.html
@@ -1,6 +1,8 @@
 ---
 layout: style
 custom_css: rocky_style
+logo_01: images/rocky_logo_01.png
+logo_02: images/rocky_logo_02.png
 color_01: 8a1913
 color_02: dc291e
 color_03: 282828
