Expanded the image section
Added two images, and explanations on how to use them, with examples.

--- a/rocky_style.html
+++ b/rocky_style.html
@@ -17,4 +17,8 @@ heading_01: This is a heading.
 text_01: Labrosaurus Peishansaurus Ampelosaurus Stormbergia Rioarribasaurus Itemirus Gongxianosaurus Ornithopsis Stegoceras Shenzhousaurus Ganzhousaurus Eocursor Pachyspondylus Sphenosaurus Cruxicheiros Tichosteus Neosaurus Sellosaurus Atlasaurus Velafrons Lurdusaurus Cerasinops Aragosaurus Minotaurasaurus Saichania Udanoceratops Aletopelta Neosodon Gojirasaurus Aardonyx.
 heading_02: This is also a heading, but smaller.
 text_02: Society philosophy derive transvaluation endless. Society revaluation reason moral ideal ubermensch horror self oneself chaos faith. Battle holiest free horror against ubermensch noble against madness marvelous madness decrepit suicide. Evil holiest madness endless of sea decrepit.
+image_explanation: Product images go on a white background only.
+product_image: http://demandware.edgesuite.net/aaol_prd/on/demandware.static/-/Sites-Master-Product-catalog-en/default/dwa42e7427/images/FQ0000106_REGULAR.jpg
+image_text_01: Yes, always.
+image_text_02: No, never.
 ---
