CSS Showing on Live Site
Added 'styleguide/' to stylesheet link to properly link for live site.
Also, change template to have 'dynamic' alt text for logos.

--- a/rocky_style.html
+++ b/rocky_style.html
@@ -2,6 +2,8 @@
 layout: style
 custom_css: rocky_style
 logo_01: images/rocky_logo_01.png
+logo_alt_01: Rocky Logo Wide
+logo_alt_02: Rocky Ram Logo
 logo_02: images/rocky_logo_02.png
 color_01: 8a1913
 color_02: dc291e
