--- a/rocky_style.html
+++ b/rocky_style.html
@@ -1,6 +1,7 @@
 ---
 layout: style
 custom_css: rocky_style
+custom_css_dev: rocky_style
 logo_01: images/rocky_logo_01.png
 logo_alt_01: Rocky Logo Wide
 logo_alt_02: Rocky Ram Logo
